fix search bar spacing

--- a/app/assets/stylesheets/search_bar.scss
+++ b/app/assets/stylesheets/search_bar.scss
@@ -33,7 +33,7 @@ form.search-bar {
     background-color: lightgray;
     height: 35px;
     position: absolute;
-    top: 45px;
+    top: 40px;
     right: 0;
 
 
